<resources>
    <string name="app_name">Seizure.io</string>

    <string name="title_section1">Connect To Device</string>
    <string name="title_section2">Emergency Contacts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="contact_name_label">Contact Name:</string>
    <string name="contact_phone_label">Contact Phone:</string>
    <string name="add_contact_button">Add Contact</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG Data</string>
    <string name="pause">Pause/Resume</string>
</resources>
